# oopsie-daisy

./: .gitignore  CI_CD_PROCESS.md  CROSS_PLATFORM_TESTING.md  DISTRIBUTION.md  README.md  WINDOWS_TESTING.md  build.py  oopsie_daisy.spec  pyproject.toml  pytest.ini  run_tests.py  test_cross_platform.py  test_deleted_files.py  test_hardware_monitor.py  test_realistic_recovery.py  test_recovery.py
.github/workflows/: build-releases.yml  test-coverage.yml
docs/: CI-CD-Process.md  Community-Testing.md  Home.md  Installation.md  README.md  Testing.md  Windows-SmartScreen.md
scripts/: setup_wiki.py
src/oopsie_daisy/: __init__.py  accelerated_scanner.py  advanced_recovery.py  app.py  file_recovery.py  hardware_monitor.py  hardware_monitor_qt.py  recovery_wizard.py  styles.py
tests/: conftest.py  test_accelerated_scanner.py  test_automated_interactions.py  test_cross_platform.py  test_folder_scanning.py  test_gpu_integration.py  test_gui_functionality.py  test_gui_visual.py  test_hardware_monitor.py  test_init.py  test_integration.py  test_minimal.py  test_preview_dialog.py  test_ui.py
